--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -11,8 +11,13 @@ jobs:
 
     runs-on: ubuntu-latest
 
+    env:
+      USER: ${{secrets.SD_USER}}
+      PASSWORD: ${{secrets.SD_PASSWORD}}
+
     steps:
-    - uses: actions/checkout@v4
+    - name: Checkout
+      uses: actions/checkout@v4
     - name: Set up JDK 17
       uses: actions/setup-java@v4
       with:
@@ -20,4 +25,6 @@ jobs:
         distribution: 'temurin'
         cache: maven
     - name: Run tests
-      run: mvn clean test
+      run: mvn clean test -Duser=$USER - Dpassword=$PASSWORD
+#    - name: Run Smoke tests
+#      run: mvn clean -DsuiteXmlFile=SmokeTest.xml test
